# RustScratchpad

./: Cargo.toml
src/: lib.rs
src/crossbeam/: consumer.rs  controller.rs  publisher.rs
src/leetcode/: 118_pascals_triangle.rs  1200_minimum_absolute_difference.rs  121_best_time_buy_sell_stock.rs  1221_split_a_string_in_balanced_strings.rs  122_best_time_buy_sell_stock_ii.rs  125_valid_palindrome.rs  1295_find_nums_with_even_digits.rs  1337_k_weakest_rows_in_matrix.rs  1351_count_negative_nums_in_sorted_matrix.rs  1380_lucky_number_in_matrix.rs  1436_destination_city.rs  14_longest_common_prefix.rs  1502_can_make_arithmetic_progression_from_sequence.rs  1512_number_of_good_pairs.rs  1572_matrix_diagonal_sum.rs  1630_arithmetic_subarrays.rs  1636_sort_array_by_increasing_frequency.rs  1652_defuse_the_bomb.rs  1672_richest_customer_wealth.rs  1684_count_the_number_of_consistent_strings.rs  169_majority_element.rs  1742_maximum_number_of_balls_in_a_box.rs  17_letter_combinations_of_phone_number.rs  1817_finding_the_users_active_minutes.rs  1844_replace_all_digits_with_characters.rs  1941_check_if_all_characters_have_equal_number_of_occurrences.rs  1_two_sum.rs  2022_convert_1d_array_into_2d_array.rs  2032_two_out_of_three.rs  205_isomorphic_strings.rs  20_valid_parentheses.rs  2103_rings_and_rods.rs  2110_number_of_smooth_descent_periods_of_a_stock.rs  2133_check_every_row_column_contains_all_numbers.rs  2160_min_sum_four_digit_num_after_split.rs  216_contains_deuplicate_ii.rs  2190_most_frequent_number_following_key_in_an_array.rs  2206_divide_array_into_equal_pairs.rs  2215_find_the_difference_of_two_arrays.rs  2248_intersection_of_multiple_arrays.rs  (+60 more)
src/low_latency/: mod.rs
src/low_latency/exercises/: branch_prediction_data_bias.rs  cache_lines_false_sharing_atomics_foundational.rs  cache_lines_false_sharing_foundational.rs  fixed_capacity_arena_allocator_single_threaded.rs  intrusive_doubly_linked_list_arena.rs  mod.rs  spsc_bounded_ring_buffer.rs  stack_vs_heap_in_hot_loop.rs
src/low_latency/exercises/engine_latency_audit/: engine_original.rs  engine_refactored.rs  ref.txt
src/low_latency/exercises/oms_latency_audit/: oms_original.rs  oms_refactored.rs  ref
src/low_latency/exercises/order_book_impl/: order_book.rs
src/low_latency/model/: arena.rs  intrusive_list.rs  mod.rs  order_slab.rs
src/practice/: concurrency.rs  generic_traits.rs  message_passing.rs  sharing_state.rs  structs_traits.rs
