[package]
name = "rustscratchpad"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "two_sum"
path = "src/leetcode/1_two_sum.rs"

[[bin]]
name = "palindrome"
path = "src/leetcode/9_palindrome.rs"

[[bin]]
name = "pascals_triangle"
path = "src/leetcode/118_pascals_triangle.rs"

[[bin]]
name = "longest_common_prefix"
path = "src/leetcode/14_longest_common_prefix.rs"

[[bin]]
name = "valid_parentheses"
path = "src/leetcode/20_valid_parentheses.rs"

[[bin]]
name = "length_of_last_word"
path = "src/leetcode/58_length_of_last_word.rs"

[[bin]]
name = "plus_one"
path = "src/leetcode/66_plus_one.rs"

[[bin]]
name = "climbing_stairs"
path = "src/leetcode/70_climbing_stairs.rs"

[[bin]]
name = "best_time_buy_sell_stock"
path = "src/leetcode/121_best_time_buy_sell_stock.rs"

[[bin]]
name = "valid_palindrome"
path = "src/leetcode/125_valid_palindrome.rs"

[dependencies]
