[package]
name = "rustscratchpad"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "two_sum"
path = "src/leetcode/1_two_sum.rs"

[[bin]]
name = "palindrome"
path = "src/leetcode/9_palindrome.rs"

[[bin]]
name = "pascals_triangle"
path = "src/leetcode/118_pascals_triangle.rs"

[[bin]]
name = "longest_common_prefix"
path = "src/leetcode/14_longest_common_prefix.rs"

[[bin]]
name = "valid_parentheses"
path = "src/leetcode/20_valid_parentheses.rs"

[[bin]]
name = "length_of_last_word"
path = "src/leetcode/58_length_of_last_word.rs"

[[bin]]
name = "plus_one"
path = "src/leetcode/66_plus_one.rs"

[[bin]]
name = "climbing_stairs"
path = "src/leetcode/70_climbing_stairs.rs"

[[bin]]
name = "best_time_buy_sell_stock"
path = "src/leetcode/121_best_time_buy_sell_stock.rs"

[[bin]]
name = "best_time_buy_sell_stock_ii"
path = "src/leetcode/122_best_time_buy_sell_stock_ii.rs"

[[bin]]
name = "valid_palindrome"
path = "src/leetcode/125_valid_palindrome.rs"

[[bin]]
name = "majority_element"
path = "src/leetcode/169_majority_element.rs"

[[bin]]
name = "jewels_and_stones"
path = "src/leetcode/771_jewels_and_stones.rs"

[[bin]]
name = "richest_customer_wealth"
path = "src/leetcode/1672_richest_customer_wealth.rs"

[[bin]]
name = "number_of_good_pairs"
path = "src/leetcode/1512_number_of_good_pairs.rs"

[[bin]]
name = "concurrency"
path = "src/practice/concurrency.rs"

[[bin]]
name = "message_passing"
path = "src/practice/message_passing.rs"

[[bin]]
name = "sharing_state"
path = "src/practice/sharing_state.rs"

[[bin]]
name = "structs_traits"
path = "src/practice/structs_traits.rs"

[[bin]]
name = "generic_traits"
path = "src/practice/generic_traits.rs"

[[bin]]
name = "crossbeam_controller"
path = "src/crossbeam/controller.rs"

[[bin]]
name = "ll_stack_vs_heap"
path = "src/low_latency/exercises/stack_vs_heap_in_hot_loop.rs"

[[bin]]
name = "ll_cache_lines_atomics"
path = "src/low_latency/exercises/cache_lines_false_sharing_atomics_foundational.rs"

[[bin]]
name = "ll_cache_lines"
path = "src/low_latency/exercises/cache_lines_false_sharing_foundational.rs"

[[bin]]
name = "ll_branch_pred_data_bias"
path = "src/low_latency/exercises/branch_prediction_data_bias.rs"

[[bin]]
name = "ll_spsc_bounded_rb"
path = "src/low_latency/exercises/spsc_bounded_ring_buffer.rs"

[[bin]]
name = "ll_hidden_latency_bombs_audit_original"
path = "src/low_latency/exercises/engine_latency_audit/engine_original.rs"

[[bin]]
name = "ll_hidden_latency_bombs_audit_refactored"
path = "src/low_latency/exercises/engine_latency_audit/engine_refactored.rs"

[[bin]]
name = "ll_fixed_cap_arena_allocator_single"
path = "src/low_latency/exercises/fixed_capacity_arena_allocator_single_threaded.rs"

[[bin]]
name = "ll_intrusive_doubly_linked_list_arena"
path = "src/low_latency/exercises/intrusive_doubly_linked_list_arena.rs"

[[bin]]
name = "ll_oms_latency_audit"
path = "src/low_latency/exercises/oms_latency_audit/oms_original.rs"

[[bin]]
name = "ll_oms_latency_audit_refactor"
path = "src/low_latency/exercises/oms_latency_audit/oms_refactored.rs"

[[bin]]
name = "ll_order_book_exercise"
path = "src/low_latency/exercises/order_book_impl/order_book.rs"

[dependencies]
crossbeam = "0.8"
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation"] }